<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorConnect.Booking4">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:background="#ff0000">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/booking4back"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Book an appointment"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:id="@+id/date"
      >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/datetext"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:background="#ff0000"
            android:ellipsize="none"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/dateselect"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/timeselect"
        android:layout_below="@+id/date">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/timeavail"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="monospace" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:id="@+id/timespin"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/timeselect">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="cursive"
            android:text="@string/apptfor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/entername"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/backsignup"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/fullname"
            android:textSize="18sp"
            android:typeface="sans" />

        <EditText
            android:id="@+id/entermail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/backsignup"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/entermail"
            android:textSize="18sp" />
    </LinearLayout>


        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/confirmappoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#008000"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/confappt"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif" />
</RelativeLayout>