<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorConnect.Booking5">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:background="#ff0000">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/booking5back"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Details"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar">
    <LinearLayout
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/Enterage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:hint="Age of patient"
            android:lineSpacingExtra="8sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="18sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/complain1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/presentcomplain"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20sp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_expand_more_black_24dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:id="@+id/complain2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/durationprob"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20sp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_expand_more_black_24dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:id="@+id/complain3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/intenprob"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20sp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_expand_more_black_24dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:id="@+id/complain4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/anyother"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20sp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_expand_more_black_24dp"/>

    </LinearLayout>
        <EditText
            android:id="@+id/othersss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:hint="@string/specifyprob"
            android:visibility="gone"
            android:lineSpacingExtra="8sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/allergies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:hint="@string/anyallergy"
            android:lineSpacingExtra="8sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bookingg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="#008000"
            android:fontFamily="casual"
            android:text="@string/bookn"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:id="@+id/addinformant">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_baseline_add_box_24"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Informant"
                android:textSize="16sp"
                android:fontFamily="serif-monospace"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:textColor="#000000"/>
        </LinearLayout>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/progbar"
            android:visibility="gone"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No file selected"
            android:textSize="14sp"
            android:id="@+id/progtxt"
            android:textAlignment="center"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Recently uploaded files:"
    android:textSize="15sp"
    android:fontFamily="@font/opensans"
    android:textStyle="bold"
    android:layout_marginTop="5dp"/>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fileslist"/>
</LinearLayout>
    </ScrollView>
</RelativeLayout>